cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_467.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ca.c:2218: error: DEAD_STORE
  The value written to &ok (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ca.c:2218:5: Write of unused value
2216.   {
2217.       char *row[DB_NUMBER], **rrow;
2218.       int ok = -1, i;
            ^
2219.       size_t serial_len = strlen(serial);
2220.   
